<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".FanFeedActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorSecondary"
    android:orientation="vertical"
    android:id="@+id/fanFeed">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/profileButton"
            android:clickable="true"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:contentDescription="Logout"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/profileicon" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/banner"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:adjustViewBounds="true"
            android:layout_height="48dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:contentDescription="banner"
            app:srcCompat="@drawable/banner" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/menuIcon"
            android:clickable="true"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="right"
            android:layout_marginEnd="20dp"
            android:scaleType="fitXY"
            android:contentDescription="map"
            app:srcCompat="@drawable/hamburgermenu" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/favoriteIcon"
                android:clickable="true"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:contentDescription="favorite"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/hearticon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/chatIcon"
                android:clickable="true"
                android:adjustViewBounds="true"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:contentDescription="chat"
                app:srcCompat="@drawable/chaticon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/groupsIcon"
                android:clickable="true"
                android:adjustViewBounds="true"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:contentDescription="groups"
                app:srcCompat="@drawable/groups" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/createIcon"
                android:clickable="true"
                android:adjustViewBounds="true"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="5dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:contentDescription="create"
                app:srcCompat="@drawable/createicon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/manageIcon"
                android:clickable="true"
                android:adjustViewBounds="true"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:contentDescription="create"
                app:srcCompat="@drawable/manageicon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/mapIcon"
                android:clickable="true"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="7dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:contentDescription="map"
                app:srcCompat="@drawable/mapicon" />
        </LinearLayout>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cards"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="wrap_content"
            android:minWidth="58dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/prevPage"
                android:clickable="true"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="0"
                android:scaleType="fitXY"
                android:contentDescription="previous page"
                app:srcCompat="@drawable/previousicon" />

        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/pageNumberDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="7dp"
            android:textSize="30dp"
            android:textColor="@color/textColorPrimary"
            android:fontFamily="sans-serif-black"
            android:text="num"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:minWidth="58dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/nextPage"
                android:clickable="true"
                android:minWidth="48dp"
                android:layout_weight="0"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:scaleType="fitXY"
                android:contentDescription="next page"
                app:srcCompat="@drawable/nexticon" />
        </LinearLayout>
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>