<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".GreeterActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/typeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/purpleconcert"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-20dp"
                android:paddingBottom="40dp"
                android:paddingTop="30dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo1" />
                <Button
                    android:id="@+id/main_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@color/colorSecondary"
                    android:text="Login"
                    style="@style/MyStyle" />

                <Button
                    android:id="@+id/main_signup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:backgroundTint="@color/colorSecondary"
                    android:text="Signup"
                    style="@style/MyStyle" />

                <TextView
                    android:id="@+id/guestButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:padding="5dp"
                    android:text="Continue as guest"/>

                <Button
                    android:id="@+id/main_payment_btn"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorSecondary"
                    android:fontFamily="sans-serif-black"
                    android:text="Payment"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="25sp"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/typeContainer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="@color/colorSecondary"
                    android:clickable="true"
                    android:clipToOutline="true"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:id="@+id/fanButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:layout_weight="1"
                        style="@style/MyStyle"
                        android:text="Fan"/>

                    <TextView
                        android:id="@+id/bandButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:layout_weight="1"
                        style="@style/MyStyle"
                        android:text="Band" />

                    <TextView
                        android:id="@+id/hostButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:layout_weight="1"
                        style="@style/MyStyle"
                        android:text="Host" />

                    <TextView
                        android:id="@+id/adminButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:layout_weight="1"
                        style="@style/MyStyle"
                        android:text="Admin" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>