...
            android:backgroundTint="@color/colorSecondary"
            class="android.widget.LinearLayout"
            android:orientation="vertical"
            android:layout_weight=".3">

            <TextView
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_gravity="center"
                android:paddingHorizontal="20dp"
                style="@style/MyStyle"
                android:text="LOGOUT"/>
        </view>

        <view
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
...
